components/mlflow-tracking/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-server
  labels:
    app: mlflow-server
    app.kubernetes.io/component: mlflow-server
    app.kubernetes.io/instance: mlflow-server
    app.kubernetes.io/name: mlflow-server
    app.kubernetes.io/part-of: sasya-arogya
spec:
  ports:
    - name: http
      port: 5001
      protocol: TCP
      targetPort: 5001
  selector:
    app: mlflow-server
  sessionAffinity: None
  type: ClusterIP
