components/mlflow-tracking/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mlflow-server
  labels:
    app: mlflow-server
    app.kubernetes.io/component: mlflow-server
    app.kubernetes.io/instance: mlflow-server
    app.kubernetes.io/name: mlflow-server
    app.kubernetes.io/part-of: sasya-arogya
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: mlflow-server
    weight: 100
  wildcardPolicy: None
